[PN-18381] refactor: changed implementation of NotificationCostRecipient
